@startuml
title System Monitor Class Diagram
namespace fast::rf {
    namespace messages {
        namespace InfrastructureMsgs {
            class ArmCommandMsg <<(M,#FFFF00)>>
        }
    }
}
namespace robot_framework_ros {
    class arm_command <<(M,#FFFF00)>> <<ROS>>
    class heartbeat <<(M,#FFFF00)>> <<ROS>>
    class ready_to_arm <<(M,#FFFF00)>> <<ROS>>
    class diagnostic <<(M,#FFFF00)>> <<ROS>>
}
namespace ncurses {
    class WINDOW
}
namespace fast::rf_ros {
    namespace utils {
        class CoreUtility
        class TranslateUtility
    }
    class BaseNode
    namespace Tools::Applications {
        package SystemMonitor #LightYellow;line:blue {
            namespace Definitions {
                enum Color #LimeGreen
                struct ScreenCoordinatePerc #LimeGreen {
                    +double startXPerc
                    +double startYPerc
                    +double widthPerc
                    +double heightPerc
                }
                struct ScreenCoordinatePixel #LimeGreen {
                    +uint16 startXPix
                    +uint16 startYPix
                    +uint16 widthPix
                    +uint16 heightPix

                }
                struct Key
            }
            interface IWindow #LimeGreen {
                +{abstract} string getName()
                +{abstract} bool isInitialized()
                +{abstract} bool update(double currentTimeSec)
                +{abstract} string pretty()
                +{abstract} bool hasFocus()
                +{abstract} bool setFocus(bool cmdFocus)
                ---Messages To Implment---
                +{abstract} void newArmCommandMsg(arm_command msg)
                +{abstract} void newHeartbeatMsg(heartbeat msg)
                +{abstract} void newReadyToArmMsg(ready_to_arm msg)
                +{abstract} void newDiagnosticMsg(diagnostic msg)
            }
            abstract BaseWindow #LimeGreen {
                +BaseWindow(string name, \n int16 tabOrder, \n double startXPerc, \n double startYPerc)
                +bool isInitialized()
                +string getName()
                +bool hasFocus()
                +bool setFocus(bool cmdFocus)
                #bool update(double currentTimeSec)
                #{abstract} bool updateWindow()
                #string pretty()
                #void setWindow(WINDOW win)
                #WINDOW getWindow()
                #void set_screen_coordinates(ScreenCoordinatePixel coord)
                #ScreenCoordinatePerc getScreenCoordinatesPerc()
                #ScreenCoordinatePixel getScreenCoordinatesPixel()
                #int16 getTabOrder()
                #void updateRecordCount(uint16 count)
                #double getCurrentTimeSec()
                
                -WINDOW win
                -string name
                -int16 tabOrder
                -ScreenCoordinatePerc m_screenCoordPerc
                -ScreenCoordinatePixel getScreenCoordinatesPixel
                -uint16 mainwindowHeight
                -uint16_t mainwindowWidth
                -bool focused
                -int[] supportedKeys
                -double m_currentTimeSec
                -uint16 record_count
            }
            BaseWindow .up.|> IWindow
            BaseWindow --> ScreenCoordinatePerc: <<use>>
            BaseWindow --> ScreenCoordinatePixel: <<use>>

            class HeaderWindow #Orange {
                +{static} double START_X_PERC
                +{static} double START_Y_PERC
                +{static} double WIDTH_PERC
                +{static} double HEIGHT_PERC
                +string pretty()
                +bool update(double currentTimeSec)
                +void newArmCommandMsg(arm_command msg)
                +void newHeartbeatMsg(heartbeat msg)
                +void newReadyToArmMsg(heartbeat msg)
                +void newDiagnosticMsg(diagnostic msg)
                #bool updateWindow()
                -ArmCommandMsg latest_arm_command
            }
            HeaderWindow -up-|> BaseWindow
            enum NodeType #LimeGreen {
                UNKNOWN = 0,
                FAST = 1,
                NON_FAST = 2
            }
            enum NodeFieldColumn #LimeGreen {
                MARKER = 0,
                ID = 1,
                HOSTNAME = 2,
                NODENAME = 3,
                STATUS = 4,
                READY_TO_ARM = 5,
                RESTARTS = 6,
                PID = 7,
                CPU = 8,
                RAM = 9,
                RX = 10

            }
            struct NodeData #LimeGreen {
                +bool initialized
                +uint16 id
                +nodestate state
                +NodeType type
                +uint16 pid
                +string host_device
                +string base_node_name
                +string node_name
                +double cpu_used_perc
                +double mem_used_perc
                +double last_heartbeat
                +double last_heartbeat_delta
                +uint64 restart_count
            }
            NodeData --> NodeType: <<use>>
            class NodeInfoWindow #LimeGreen {
                +{static} double START_X_PERC
                +{static} double START_Y_PERC
                +{static} double WIDTH_PERC
                +{static} double HEIGHT_PERC
                +string pretty()
                +bool update(double currentTimeSec)
                +void newArmCommandMsg(arm_command msg)
                +void newHeartbeatMsg(heartbeat msg)
                +void newReadyToArmMsg(heartbeat msg)
                +void newDiagnosticMsg(diagnostic msg)
                #bool updateWindow()
                -bool insertNode(NodeType node_type,string device, string base_node_name, string node_name)
                -string getWindowHeader()

            }
            NodeInfoWindow +-- NodeType
            NodeInfoWindow +-- NodeFieldColumn
            NodeInfoWindow +-- NodeData
            NodeInfoWindow -up-|> BaseWindow
            class DeviceInfoWindow  {
                +{static} double START_X_PERC
                +{static} double START_Y_PERC
                +{static} double WIDTH_PERC
                +{static} double HEIGHT_PERC
                +string pretty()
                +bool update(double currentTimeSec)
                +void newArmCommandMsg(arm_command msg)
                +void newHeartbeatMsg(heartbeat msg)
                +void newReadyToArmMsg(heartbeat msg)
                +void newDiagnosticMsg(diagnostic msg)
                #bool updateWindow()
            }
            DeviceInfoWindow -up-|> BaseWindow
            class NodeDiagnosticMonitor #LimeGreen {
                +diagnostic nodeDiagnostic
                +double last_update_sec
                +double last_update_delta_sec
            }
            enum DiagnosticWindowMode #LimeGreen {
                UNKNOWN=0,
                NODE=1,
                DIAGNOSTIC_TYPE=2,
                SYSTEM = 3
            }
            class DiagnosticWindow #LimeGreen {
                +{static} double START_X_PERC
                +{static} double START_Y_PERC
                +{static} double WIDTH_PERC
                +{static} double HEIGHT_PERC
                +string pretty()
                +bool update(double currentTimeSec)
                +void setNodeToMonitor(string node_to_monitor)
                +void newArmCommandMsg(arm_command msg)
                +void newHeartbeatMsg(heartbeat msg)
                +void newReadyToArmMsg(heartbeat msg)
                +void newDiagnosticMsg(diagnostic msg)
                #bool updateWindow()
                -DiagnosticWindowMode window_mode
                -NodeDiagnosticMonitor[] nodeDiagnostic_monitors
                -string node_to_monitor
            }
            DiagnosticWindow +-- NodeDiagnosticMonitor
            DiagnosticWindow -up-|> BaseWindow

            class StatusWindow #Orange {
                +{static} double START_X_PERC
                +{static} double START_Y_PERC
                +{static} double WIDTH_PERC
                +{static} double HEIGHT_PERC
                +string pretty()
                +bool update(double currentTimeSec)
                +void newArmCommandMsg(arm_command msg)
                +void newHeartbeatMsg(heartbeat msg)
                +void newDiagnosticMsg(diagnostic msg)
                #bool updateWindow()
            }
            StatusWindow -up-|> BaseWindow

            class MenuWindow {
                +{static} double START_X_PERC
                +{static} double START_Y_PERC
                +{static} double WIDTH_PERC
                +{static} double HEIGHT_PERC
                +string pretty()
                +bool update(double currentTimeSec)
                +void newArmCommandMsg(arm_command msg)
                +void newHeartbeatMsg(heartbeat msg)
                +void newDiagnosticMsg(diagnostic msg)
                #bool updateWindow()
            }
            MenuWindow -up-|> BaseWindow

            class SystemMonitorNode #Orange {
                -bool rescanROSNetwork()
                -void arm_command_callback(arm_command msg)
                -void heartbeat_Callback(heartbeat msg)
                -void ready_to_arm_Callback(heartbeat msg)
                -void diagnostic_Callback(diagnostic msg)
                -bool updateMonitorList(string[] heartbeat_list, \nstring[] new_heartbeat_topics_to_subscribe, \nstring[] readytoarm_list, \nstring[] new_readytoarm_topics_to_subscribe, \n diagnostic_list, \n new_diagnostic_topics_to_subscribe)
                -IWindow[] windows
                -ros::Subscriber armCommandSub
                -string[] monitoredHeartbeatTopics
                -ros::Subscriber[] heartbeatSubs
                -string[] m_monitoredReadyToArmTopics
                -ros::Subscriber[] m_readyToArmSubs
                -string[] m_monitoredDiagnosticTopics
                -ros::Subscriber[] m_diagnosticSubs
            }
            SystemMonitorNode -up-|> BaseNode
            SystemMonitorNode *-up-> HeaderWindow
            SystemMonitorNode *-up-> NodeInfoWindow
            SystemMonitorNode *-up-> DeviceInfoWindow
            SystemMonitorNode *-up-> DiagnosticWindow
            SystemMonitorNode *-up-> StatusWindow
            SystemMonitorNode *-up-> MenuWindow

        }
    }
}
@enduml